--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <link rel="stylesheet" href="css/lesson1.css">
+        <link rel="stylesheet" href="css/lesson2.css">
+        <link rel="stylesheet" href="css/screen.css">
+
         <meta charset="utf-8">
         <title>Tensor School</title>
     </head>
@@ -17,7 +19,105 @@
 			<div class="nav courseall">Будущий инженер- программист</div>
 			<div class="nav courseall">Python-разработчик</div>
 		</nav>
-		<article>article</article>
-		<footer>footer</footer>
+		<article>
+			<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/intro.png"></div>
+				<div class="card_title">00 - Введение</div>
+				<div class="card_date">20 апреля 2020</div>
+				<div class="card_discr">
+				<p>Привет!</p>
+				<p>Рад приветствовать тебя на нулевом, вводном занятии. 
+				Почему нулевом? Настоящий программист считает с нуля! 😄</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+			<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/style.png"></div>
+				<div class="card_title">01 - Стили</div>
+				<div class="card_date">23 апреля 2020</div>
+				<div class="card_discr">
+				<p>Сегодня на занятии мы узнаем:</p>
+				<p>Что такое стили Из чего они состоят Какие бывают стили Познакомились с единицами измерения</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+			<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/flex.png"></div>
+				<div class="card_title">02 - Флексы, адаптивка, ...</div>
+				<div class="card_date">27 апреля 2020</div>
+				<div class="card_discr">
+				<p>Сегодня на вебинаре ты узнаешь, что такое DOM, БЭМ и много других новых слов!
+				Таблицы - прошлый век. Флоуты - устарели. Дивы - криво.
+				Что же делать? Как сверстать красиво и не сломать мозг? Выход есть - Flex & Grid!</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+			<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/js.png"></div>
+				<div class="card_title">03 - JavaScript: Начало</div>
+				<div class="card_date">30 апреля 2020</div>
+				<div class="card_discr">
+				<p>С чего начать изучение JavaScript? Конечно же, с вебинара Онлайн-школы “Тензор”!
+				Синтаксис, типы и структуры данных, функции и их использование - всё здесь!</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+			<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/intro.png"></div>
+				<div class="card_title">00 - Введение</div>
+				<div class="card_date">20 апреля 2020</div>
+				<div class="card_discr">
+				<p>Привет!</p>
+				<p>Рад приветствовать тебя на нулевом, вводном занятии. 
+				Почему нулевом? Настоящий программист считает с нуля! 😄</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+			<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/intro.png"></div>
+				<div class="card_title">00 - Введение</div>
+				<div class="card_date">20 апреля 2020</div>
+				<div class="card_discr">
+				<p>Привет!</p>
+				<p>Рад приветствовать тебя на нулевом, вводном занятии. 
+				Почему нулевом? Настоящий программист считает с нуля! 😄</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+						<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/intro.png"></div>
+				<div class="card_title">00 - Введение</div>
+				<div class="card_date">20 апреля 2020</div>
+				<div class="card_discr">
+				<p>Привет!</p>
+				<p>Рад приветствовать тебя на нулевом, вводном занятии. 
+				Почему нулевом? Настоящий программист считает с нуля! 😄</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+						<div class="card">
+				<div class="card__logo card__logo_course"><img src="img/intro.png"></div>
+				<div class="card_title">00 - Введение</div>
+				<div class="card_date">20 апреля 2020</div>
+				<div class="card_discr">
+				<p>Привет!</p>
+				<p>Рад приветствовать тебя на нулевом, вводном занятии. 
+				Почему нулевом? Настоящий программист считает с нуля! 😄</p>
+				</div>
+				<div class="card_href">Перейти</div>
+			
+			</div>
+		</article>
+		<footer>
+			<div class="tenzor">(c) 2020, Компания “Тензор”</div>
+			<div class="rule">Правила пользования</div>
+		</footer>
 	</body> 	
 </html>
